Primera versió del lloc de documentació

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: 'Documentació de les tasques'
 theme:
   name: 'material'
-  custom_dir: 'overrides'
+  custom_dir: 'docs/overrides'
   palette:
     primary: 'green'
     accent: 'orange'
